# AstroAPI

./: README.md  main.py  pyproject.toml  requirements.txt  test_results.txt  timezone_utils.py
ai/: prompts.py
astro/: __init__.py  aspects.py  ephemeris.py  i18n_ptbr.py  solar_return.py  solar_return_schemas.py  utils.py
core/: cache.py  db.py  errors.py  limits.py  plans.py  rbac.py  redis_cache.py  security.py  timezone_utils.py
docs/: architecture.md  ceu-interno-ux-improvements.md  examples.md  fixtures.md  integration-report.md  loveable-endpoints.md  proxy.md  qa-backend-checklist.md  quality-gates.md
interpretations/: __init__.py  aspects.py  houses.py  planets.py  synastry.py  transits.py
migrations/: 001_user_connections.sql
routes/: __init__.py  account.py  ai.py  alerts.py  chart.py  checkin.py  common.py  cosmic_decision.py  cosmic_weather.py  cycles.py  diagnostics.py  forecast.py  i18n.py  inner_sky.py  insights.py  lunations.py  modular_engine.py  notifications.py  professional.py  progressions.py  solar_return.py  synastry.py  system.py  time.py  transits.py
schemas/: __init__.py  ai.py  alerts.py  chart.py  checkin.py  common.py  cosmic.py  cosmic_weather.py  diagnostics.py  forecast.py  insights.py  lunations.py  modular_engine.py  notifications.py  progressions.py  solar_return.py  synastry.py  time.py  transits.py
scripts/: check_content_inventory.py  concurrency_test.py  contract_test_proxy_backend.py  generate_interpretation_modules.py  generate_professional_modules_1200.py  generate_professional_modules_3000.py  run_local.ps1  (+2 more)
(+104 files in other folders)
